<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_post"
        android:icon="@drawable/ic_create"
        android:showAsAction="ifRoom"
        android:title="@null"/>
    <item
        android:id="@+id/action_main_menu"
        android:icon="@drawable/ic_main_menu"
        android:showAsAction="ifRoom"
        android:title="@null">
        <menu>
            <item
                android:id="@+id/menu_my_account"
                android:icon="@drawable/ic_my_account"
                android:title="@string/menu_my_account"/>
            <item
                android:id="@+id/menu_my_posts"
                android:icon="@drawable/ic_my_posts"
                android:title="@string/menu_my_posts"/>
            <item
                android:id="@+id/menu_my_follows"
                android:icon="@drawable/ic_my_follows"
                android:title="@string/menu_my_follows"/>
            <item
                android:id="@+id/menu_messages"
                android:icon="@drawable/ic_message"
                android:title="@string/menu_messages"/>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/menu_log_out"
                android:icon="@drawable/ic_log_out"
                android:title="@string/menu_log_out"/>
        </menu>
    />
    </item>

</menu>