<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:padding="20dp" 
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/editText_areaCode"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:background="@null"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/register_area_code"
            android:padding="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.6"
            android:focusable="true"
            android:hint="@string/login_input_phone_number"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_getValidCode"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_selector"
        android:text="@string/click_to_get_vericode"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editText_validCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/register_input_validcode"
        android:padding="10dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/reset_input_password"
        android:padding="10dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg_selector"
        android:text="@string/ok"
        android:textColor="@android:color/white" />

</LinearLayout>