<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
         android:layout_margin="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/register_area_code"
            android:padding="10dp"
            android:textSize="18sp" 
            android:background="@null"/>

        <EditText
            android:id="@+id/editText_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:focusable="true"
            android:maxLength="11"
            android:hint="@string/login_input_phone_number"
            android:padding="10dp"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/layout_telephone"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_bg_selector"
        android:text="@string/signup"
        android:textColor="@android:color/white" />

</LinearLayout>