<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.gedeng.client"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7F000000"
            android:orientation="horizontal" >

            <com.gedeng.ui.customview.CircularImageView
                android:id="@+id/imageView_portrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="@null"
                android:src="@drawable/sample360"
                app:border="true"
                app:border_color="@color/GrayLight"
                app:border_width="4dp"
                app:shadow="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|left"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/textView_userName"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="User Name"
                            android:textColor="#FFFFFF"
                            android:textSize="18sp" 
                            android:textStyle="bold"/>

                        <ImageView
                            android:id="@+id/imageView_gender"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:src="@drawable/ic_female" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="A girl should be two things: classy and fabulous."
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/profile_photo"
                android:textSize="@dimen/activity_my_account_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <com.gedeng.ui.customview.CircularImageView
                android:id="@+id/imageView_editPortrait"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@null"
                android:src="@drawable/sample360"
                app:border="true"
                app:border_color="@color/GrayLight"
                app:border_width="4dp"
                app:shadow="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/user_name"
                android:textSize="@dimen/activity_my_account_text_size" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="0px"
                android:focusable="true"
                android:focusableInTouchMode="true" >

                <requestFocus />
            </LinearLayout>

            <EditText
                android:id="@+id/editText_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:maxLength="12"
                android:text="User Name"
                android:textSize="@dimen/activity_my_account_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signature"
                android:textSize="@dimen/activity_my_account_text_size" />

            <EditText
                android:id="@+id/editText_signature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:maxLength="48"
                android:singleLine="true"
                android:text="A girl should be two things: classy and fabulous."
                android:textSize="@dimen/activity_my_account_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/gender"
                android:textSize="@dimen/activity_my_account_text_size" />

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男  " />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="女  " />

                <RadioButton
                    android:id="@+id/radio_unknown_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="保密" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/layout_setSchools"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_button_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_setSchools"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/schools"
                android:textSize="@dimen/activity_my_account_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />

        <LinearLayout
            android:id="@+id/layout_resetPassword"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/setting_button_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/reset_password"
                android:textSize="@dimen/activity_my_account_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#C0C0C0" />
    </LinearLayout>

</ScrollView>